# mcp-yandex-wiki

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml  release.yml
yandex-wiki-mcp/: server.py
yandex_wiki_mcp/: __init__.py  server.py
