[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "yandex-wiki-mcp"
version = "0.1.0"
description = "MCP server for Yandex Wiki with read/write tools and readonly mode"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "aiocache[redis]>=0.12.3",
  "fastmcp>=2.0.0",
  "httpx>=0.27.0",
]
keywords = ["mcp", "yandex", "wiki", "fastmcp"]

[project.scripts]
yandex-wiki-mcp = "yandex-wiki-mcp.server:main"
yandex-wiki-mcp-ro = "yandex-wiki-mcp.server:main_readonly"

[tool.hatch.build]
ignore-vcs = true

[tool.hatch.build.targets.wheel]
packages = ["yandex-wiki-mcp"]

[tool.hatch.build.targets.sdist]
only-include = [
  "yandex-wiki-mcp",
  "README.md",
  "pyproject.toml",
]
exclude = [
  "/.gitignore",
]
