[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "mcp-yandex-wiki"
dynamic = ["version"]
description = "MCP server for Yandex Wiki with read/write tools and readonly mode"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
  { name = "Vlad Butuzov", email = "v.butuzov@luchi.ru" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "aiocache[redis]>=0.12.3",
  "backoff>=2.2.1",
  "pydantic-settings>=2.13.1",
  "fastmcp>=3.1.0",
  "httpx>=0.27.0",
]
keywords = ["mcp", "yandex", "wiki", "fastmcp"]

[project.urls]
Homepage = "https://github.com/best-doctor/yandex-wiki-mcp"
Repository = "https://github.com/best-doctor/yandex-wiki-mcp"
Issues = "https://github.com/best-doctor/yandex-wiki-mcp/issues"

[project.scripts]
mcp-yandex-wiki = "yandex_wiki_mcp.server:main"
mcp-yandex-wiki-ro = "yandex_wiki_mcp.server:main_readonly"

[tool.hatch.version]
path = "yandex_wiki_mcp/__about__.py"

[tool.hatch.build]
ignore-vcs = true

[tool.hatch.build.targets.wheel]
packages = ["yandex_wiki_mcp"]

[tool.hatch.build.targets.sdist]
only-include = [
  "yandex_wiki_mcp",
  "README.md",
  "pyproject.toml",
]
exclude = [
  "/.gitignore",
]
